// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OverallFeedback /> renders overall feedback is disabled 1`] = `
<Form.Group>
  <Form.Label
    className="criteria-label"
  >
    <span
      className="criteria-title"
    >
      Overall comments
    </span>
    <InfoPopover
      onClick={[Function]}
    >
      <div>
        props.overallFeedbackPrompt
      </div>
    </InfoPopover>
  </Form.Label>
  <Form.Control
    as="textarea"
    className="rubric-feedback feedback-input"
    disabled={true}
    floatingLabel="Comments (Optional)"
    onChange={[MockFunction props.onChange]}
    value=""
  />
</Form.Group>
`;

exports[`<OverallFeedback /> renders overall feedback is enabled 1`] = `
<Form.Group>
  <Form.Label
    className="criteria-label"
  >
    <span
      className="criteria-title"
    >
      Overall comments
    </span>
    <InfoPopover
      onClick={[Function]}
    >
      <div>
        props.overallFeedbackPrompt
      </div>
    </InfoPopover>
  </Form.Label>
  <Form.Control
    as="textarea"
    className="rubric-feedback feedback-input"
    disabled={false}
    floatingLabel="Add comments (Optional)"
    onChange={[MockFunction props.onChange]}
    value=""
  />
</Form.Group>
`;

exports[`<OverallFeedback /> renders overall feedback is invalid 1`] = `
<Form.Group>
  <Form.Label
    className="criteria-label"
  >
    <span
      className="criteria-title"
    >
      Overall comments
    </span>
    <InfoPopover
      onClick={[Function]}
    >
      <div>
        props.overallFeedbackPrompt
      </div>
    </InfoPopover>
  </Form.Label>
  <Form.Control
    as="textarea"
    className="rubric-feedback feedback-input"
    disabled={false}
    floatingLabel="Add comments (Optional)"
    onChange={[MockFunction props.onChange]}
    value=""
  />
  <Form.Control.Feedback
    className="feedback-error-msg"
    type="invalid"
  >
    The overall feedback is required
  </Form.Control.Feedback>
</Form.Group>
`;
